--- a/app/views/requests/_detail.html.erb
+++ b/app/views/requests/_detail.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag :remote_modal, target: :_top do %>
   <div class="modal fade" data-controller="modal">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-xl">
       <div class="modal-content">
         <div class="modal-header mb-5">
           <div class="modal-title">
