--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -15,7 +15,7 @@
       &nbsp;&nbsp;
       <%= form.label :first_name %>
     </span>
-    <%= form.text_field :first_name, class: 'form-control' %>
+    <%= form.text_field :first_name, class: "form-control" %>
   </div>
   <div class="input-group mb-2">
     <span class="input-group-text input-group-text-fixed text-danger">
@@ -23,7 +23,7 @@
       &nbsp;&nbsp;
       <%= form.label :last_name %>
     </span>
-    <%= form.text_field :last_name, class: 'form-control' %>
+    <%= form.text_field :last_name, class: "form-control" %>
   </div>
   <div class="input-group mb-2">
     <span class="input-group-text input-group-text-fixed text-danger">
@@ -31,7 +31,7 @@
       &nbsp;&nbsp;
       <%= form.label :mobile %>
     </span>
-    <%= form.text_field :mobile, class: 'form-control' %>
+    <%= form.text_field :mobile, class: "form-control" %>
   </div>
   <div class="input-group mb-2">
     <span class="input-group-text input-group-text-fixed">
@@ -39,7 +39,7 @@
       &nbsp;&nbsp;
       <%= form.label :email %>
     </span>
-    <%= form.text_field :email, class: 'form-control' %>
+    <%= form.text_field :email, class: "form-control" %>
   </div>
   <div class="card mb-2 border-secondary">
     <div class="card-body">
@@ -53,7 +53,7 @@
             [ ATTENZIONE - se abilitato &egrave; obbligatorio specificatre la CATEGORIA ]
           </small>
         <% end %>
-        <%= form.check_box :subscriber, class: 'form-check-input' %>
+        <%= form.check_box :subscriber, class: "form-check-input" %>
       </div>
       <div class="input-group mb-2 mt-3">
         <span class="input-group-text input-group-text-fixed">
@@ -79,9 +79,9 @@
       &nbsp;&nbsp;
       <%= form.label :note %>
     </span>
-    <%= form.text_area :note, class: 'form-control' %>
+    <%= form.text_area :note, class: "form-control" %>
   </div>
   <div class="d-grid">
-    <%= form.submit class: 'btn btn-primary' %>
+    <%= form.submit class: "btn btn-primary" %>
   </div>
 <% end %>
