--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -39,10 +39,9 @@ $yellow: #f2e20f !default;
 $green: #14ac17 !default;
 $teal: #00d1a5 !default;
 $cyan: #00bcc7 !default;
-$panna: #faf8ed !default;
-$orange-light: #fae1e1 !default;
-$green-light: rgb(224, 255, 226) !default;
-$very-light-gray: #f1f1f1 !default;
+$panna: #faf6f5 !default;
+$orange-light: #ffe8d1 !default;
+$green-light: #d1ffd5 !default;
 
 $primary: $blue !default;
 $success: $green !default;
