--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -57,7 +57,7 @@
       </div>
       <div class="input-group mb-2 mt-3">
         <span class="input-group-text input-group-text-fixed">
-          <i class="fa-regular fa-square"></i>
+          <i class="fa-solid fa-square"></i>
           &nbsp;&nbsp;
           <%= form.label :category %>
         </span>
