--- a/app/assets/stylesheets/_customs.scss
+++ b/app/assets/stylesheets/_customs.scss
@@ -6,7 +6,7 @@ body {
   font-family: "RobotoCondensed-Regular";
   font-weight: 300;
   font-size: 12pt;
-  background-color: $very-light-gray;
+  background-color: $panna;
   padding-top: 5.6rem;
 }
 a {
@@ -29,6 +29,19 @@ a {
   font-size: 12pt;
 }
 /* NAVBAR */
+.navbar-nav {
+  .nav-item {
+    .nav-link {
+      color: #fff;
+
+      &:hover {
+        background-color: #fff;
+        color: $primary;
+        border-radius: 0.3rem;
+      }
+    }
+  }
+}
 .dropdown-menu {
   background-color: $primary;
   color: $white;
@@ -36,7 +49,7 @@ a {
   padding: 0.6rem;
 }
 .dropdown-item {
-  font-family: "RobotoCondensed-Regular";
+  //font-family: "RobotoCondensed-Regular";
   font-weight: 300;
   font-size: 12pt;
   color: $white;
@@ -44,18 +57,6 @@ a {
   &:hover {
     color: $primary;
     background-color: $white;
-    border-radius: 0.3rem;
-  }
-}
-.nav-link {
-  font-family: "RobotoCondensed-Regular";
-  font-weight: 300;
-  font-size: 12pt;
-  color: $white;
-
-  &:hover {
-    color: $white;
-    background-color: $info;
     border-radius: 0.3rem;
   }
 }
