Refined Again Requests

--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -31,7 +31,7 @@
       &nbsp;&nbsp;
       <%= form.label :mobile %>
     </span>
-    <%= form.text_field :mobile, class: "form-control" %>
+    <%= form.text_field :mobile, class: "form-control", :maxlenght => 15 %>
   </div>
   <div class="input-group mb-2">
     <span class="input-group-text input-group-text-fixed">
