--- a/app/views/requests/_form_modal.html.erb
+++ b/app/views/requests/_form_modal.html.erb
@@ -6,7 +6,7 @@
           <div class="modal-title">
             <%= image_tag("request_new_logo.svg", class: "img-fluid") %>
           </div>
-          <a class="modal-header-link" data-bs-dismiss="modal" aria-label="Close">
+          <a class="btn btn-light modal-header-link" data-bs-dismiss="modal" aria-label="Close">
             <i class="fa-solid fa-xmark"></i>
           </a>
         </div>
