--- a/app/views/requests/_form_modal_edit.html.erb
+++ b/app/views/requests/_form_modal_edit.html.erb
@@ -6,8 +6,8 @@
           <div class="modal-title">
             <%= image_tag("request_edit_logo.svg", class: "img-fluid") %>
           </div>
-          <a class="modal-header-link" data-bs-dismiss="modal" aria-label="Close">
-            <i class="fa-solid fa-xmark"></i>
+          <a class="btn btn-light modal-header-link" data-bs-dismiss="modal" aria-label="Close">
+            <i class="fa-solid fa-xmark text-danger"></i>
           </a>
         </div>
         <div class="modal-body mb-5">
