Created Dashboard and statistics

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -29,7 +29,7 @@ $gray-800: #333333 !default;
 $gray-900: #1a1a1a !default;
 $black: #000 !default;
 
-$blue: #4662d9 !default;
+$blue: #2a49cb !default;
 $indigo: #4b49ac !default;
 $purple: #d946ad !default;
 $pink: #fd7cff !default;
@@ -39,7 +39,7 @@ $yellow: #f2e20f !default;
 $green: #14ac17 !default;
 $teal: #00d1a5 !default;
 $cyan: #00bcc7 !default;
-$panna: #faf6f5 !default;
+$panna: #fcf8f8 !default;
 $orange-light: #ffe8d1 !default;
 $green-light: #d1ffd5 !default;
 
