--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -2,6 +2,37 @@
   <p class="mb-3">
     <%= image_tag("request_index_logo.svg", class: "img-fluid") %>
   </p>
+  <!-- SEARCH -->
+  <%= search_form_for @q, class: 'd-flex flex-row align-items-center flex-wrap' do |form| %>
+    <div class='form-row align-items-center'>
+      <div class="input-group">
+        <span class="input-group-text input-group-text-fixed text-primary">
+          <i class="fa-solid fa-user"></i>
+          &nbsp;&nbsp;
+          <%= form.label :first_name %>
+        </span>
+        <%= form.search_field :last_name_or_mobile_cont, placeholder: 'Cognome o Telefono contiene', class: 'form-control' %>
+      </div>
+    </div>
+    &nbsp;&nbsp;
+    <div class='form-row align-items-center'>
+      <div class="input-group">
+        <span class="input-group-text input-group-text-fixed text-primary">
+          <i class='fas fa-file-contract'></i>
+          &nbsp;&nbsp;
+          <%= form.label :practice_id %>
+        </span>
+        <%= form.search_field :practice_name_cont, placeholder: 'Tipo Pratica contiene', class: 'form-control' %>
+      </div>
+    </div>
+    &nbsp;&nbsp;
+    <%= button_tag(type: 'submit', class: 'btn btn-outline-primary') do %>
+      <strong>
+        <i class='fas fa-search'></i>&nbsp;&nbsp;Cerca
+      </strong>
+    <% end %>
+  <% end %>
+  <!-- /SEARCH -->
   <hr class="hr-primary"/>
   <table class="table table-hover">
     <thead>
